--- a/cobigen-cli/pom.xml
+++ b/cobigen-cli/pom.xml
@@ -1,104 +1,132 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>picocli</groupId>
-  <artifactId>com.cobigen.picocli</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>picocli</name>        
-  
-  <dependencies>
-  <dependency>
-  <groupId>com.devonfw.cobigen</groupId>
-  <artifactId>core</artifactId>
-  <version>5.2.0</version>
-</dependency>
-  <dependency>
-  <groupId>com.devonfw.cobigen</groupId>
-  <artifactId>core-api</artifactId>
-  <version>5.2.0</version>
-</dependency>
-<dependency>
-  <groupId>com.devonfw.cobigen</groupId>
-  <artifactId>javaplugin</artifactId>
-  <version>2.0.0</version>
-</dependency>
-
-<dependency>
-  <groupId>com.devonfw.cobigen</groupId>
-  <artifactId>tsplugin</artifactId>
-  <version>2.1.0</version>
-</dependency>
-<dependency>
-  <groupId>com.devonfw.cobigen</groupId>
-  <artifactId>xmlplugin</artifactId>
-  <version>4.0.0</version>
-</dependency>
-<dependency>
-  <groupId>com.devonfw.cobigen</groupId>
-  <artifactId>textmerger</artifactId>
-  <version>2.0.0</version>
-</dependency>
-<dependency>
-  <groupId>com.devonfw.cobigen</groupId>
-  <artifactId>openapiplugin</artifactId>
-  <version>2.2.0</version>
-</dependency>
-<dependency>
-  <groupId>com.devonfw.cobigen</groupId>
-  <artifactId>maven-plugin</artifactId>
-  <version>4.1.0</version>
-  <type>maven-plugin</type>
-</dependency>
-<dependency>
-<groupId>org.freemarker</groupId>
-<artifactId>freemarker</artifactId>
-<version>2.3.23</version>
-<scope>compile</scope>
-</dependency>
-<dependency>
-  <groupId>com.devonfw.cobigen</groupId>
-  <artifactId>tempeng-freemarker</artifactId>
-  <version>2.0.0</version>
-</dependency>
-
-<dependency>        
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>1.7.25</version>    
-    </dependency>
-<dependency>
-  <groupId>org.slf4j</groupId>
-  <artifactId>slf4j-simple</artifactId>
-  <version>1.7.21</version>
-</dependency>
-    
-      <dependency>
-   <groupId>net.sf.m-m-m</groupId>
-      <artifactId>mmm-code-java-parser</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
-   </dependency>
-   <dependency>
-   <groupId>net.sf.m-m-m</groupId>
-      <artifactId>mmm-code-base</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
-   </dependency>
+   <modelVersion>4.0.0</modelVersion>
+   <groupId>picocli</groupId>
+   <artifactId>com.cobigen.picocli</artifactId>
+   <version>0.0.1-SNAPSHOT</version>
+   <name>picocli</name>
    
-  </dependencies>
+   
+   <dependencies>
+      <dependency>
+         <groupId>com.devonfw.cobigen</groupId>
+         <artifactId>core</artifactId>
+         <version>5.2.0</version>
+      </dependency>
+      <dependency>
+          <groupId>info.picocli</groupId>
+          <artifactId>picocli</artifactId>
+          <version>3.9.6</version>
+      </dependency>
+
+      <dependency>
+         <groupId>com.devonfw.cobigen</groupId>
+         <artifactId>core-api</artifactId>
+         <version>5.2.0</version>
+      </dependency>
+      <dependency>
+         <groupId>com.devonfw.cobigen</groupId>
+         <artifactId>javaplugin</artifactId>
+         <version>2.0.0</version>
+      </dependency>
+      <dependency>
+         <groupId>com.devonfw.cobigen</groupId>
+         <artifactId>tsplugin</artifactId>
+         <version>2.1.0</version>
+      </dependency>
+      <dependency>
+         <groupId>com.devonfw.cobigen</groupId>
+         <artifactId>xmlplugin</artifactId>
+         <version>4.0.0</version>
+      </dependency>
+      <dependency>
+         <groupId>com.devonfw.cobigen</groupId>
+         <artifactId>textmerger</artifactId>
+         <version>2.0.0</version>
+      </dependency>
+      <dependency>
+         <groupId>com.devonfw.cobigen</groupId>
+         <artifactId>openapiplugin</artifactId>
+         <version>2.2.0</version>
+      </dependency>
+      <dependency>
+         <groupId>com.devonfw.cobigen</groupId>
+         <artifactId>maven-plugin</artifactId>
+         <version>4.1.0</version>
+         <type>maven-plugin</type>
+      </dependency>
+      <dependency>
+         <groupId>org.freemarker</groupId>
+         <artifactId>freemarker</artifactId>
+         <version>2.3.23</version>
+         <scope>compile</scope>
+      </dependency>
+      <dependency>
+         <groupId>com.devonfw.cobigen</groupId>
+         <artifactId>tempeng-freemarker</artifactId>
+         <version>2.0.0</version>
+      </dependency>
+      <dependency>
+         <groupId>org.slf4j</groupId>
+         <artifactId>slf4j-api</artifactId>
+         <version>1.7.25</version>
+      </dependency>
+      <dependency>
+         <groupId>org.slf4j</groupId>
+         <artifactId>slf4j-simple</artifactId>
+         <version>1.7.21</version>
+      </dependency>
+      <dependency>
+         <groupId>net.sf.m-m-m</groupId>
+         <artifactId>mmm-code-java-parser</artifactId>
+         <version>1.0.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+         <groupId>net.sf.m-m-m</groupId>
+         <artifactId>mmm-code-base</artifactId>
+         <version>1.0.0-SNAPSHOT</version>
+      </dependency>
+      
+      <dependency>
+         <groupId>net.sf.m-m-m</groupId>
+         <artifactId>mmm-code-java-maven</artifactId>
+         <version>1.0.0-SNAPSHOT</version>
+      </dependency>
+      
+      <dependency>
+        <groupId>com.devonfw.cobigen</groupId>
+        <artifactId>com.devonfw.cobigen.eclipse</artifactId>
+        <version>4.3.2</version>
+      </dependency>
   
-    <build>
-    <plugins>
-        <plugin>
+  
+      <dependency>
+         <groupId>net.sf.m-m-m</groupId>
+         <artifactId>mmm-code-java</artifactId>
+         <version>1.0.0-SNAPSHOT</version>
+      </dependency>
+   </dependencies>
+   <build>
+      <plugins>
+         <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+               <source>1.8</source>
+               <target>1.8</target>
+            </configuration>
+         </plugin>
+         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jar-plugin</artifactId>
             <version>3.0.2</version>
             <configuration>
-                <archive>
-                    <manifest>
-                        <mainClass>com.cobigen.picocli.TestPicocli</mainClass>
-                    </manifest>
-                </archive>
+               <archive>
+                  <manifest>
+                     <mainClass>com.cobigen.picocli.TestPicocli</mainClass>
+                  </manifest>
+               </archive>
             </configuration>
-        </plugin>
-    </plugins>
-</build>
-  
+         </plugin>
+      </plugins>
+   </build>
 </project>
