#870 Fixing openapi short paths

--- a/cobigen/cobigen-openapiplugin-parent/cobigen-openapiplugin/src/test/resources/testdata/unittest/OpenAPIInputReaderTest/paths-resolution.yaml
+++ b/cobigen/cobigen-openapiplugin-parent/cobigen-openapiplugin/src/test/resources/testdata/unittest/OpenAPIInputReaderTest/paths-resolution.yaml
@@ -28,6 +28,12 @@ paths:
           description: Any
       requestBody:
         $ref: '#/components/requestBodies/TableData'
+  /tablemanagement:
+    x-component: tablemanagement
+    post:
+      responses:
+        "200":
+          description: Any
 components:
     schemas:
         Table:
