--- a/cobigen-cli/pom.xml
+++ b/cobigen-cli/pom.xml
@@ -67,6 +67,21 @@
          <version>2.0.0</version>
       </dependency>
       <dependency>
+        <groupId>com.devonfw.cobigen</groupId>
+         <artifactId>htmlplugin</artifactId>
+          <version>2.0.1</version>
+      </dependency>
+      <dependency>
+        <groupId>com.devonfw.cobigen</groupId>
+        <artifactId>propertyplugin</artifactId>
+      <version>2.0.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.devonfw.cobigen</groupId>
+          <artifactId>jsonplugin</artifactId>
+          <version>2.0.0</version>
+      </dependency>
+      <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
          <version>1.7.25</version>
@@ -98,13 +113,7 @@
         <artifactId>com.devonfw.cobigen.eclipse</artifactId>
         <version>4.3.2</version>
       </dependency>
-  
-  
-      <dependency>
-         <groupId>net.sf.m-m-m</groupId>
-         <artifactId>mmm-code-java</artifactId>
-         <version>1.0.0-SNAPSHOT</version>
-      </dependency>
+ 
    </dependencies>
    <build>
       <plugins>
