--- a/cobigen-cli/pom.xml
+++ b/cobigen-cli/pom.xml
@@ -109,6 +109,18 @@
       </dependency>
       
       <dependency>
+         <groupId>net.sf.m-m-m</groupId>
+         <artifactId>mmm-code-java-impl</artifactId>
+         <version>1.0.0-SNAPSHOT</version>
+      </dependency>
+      
+    <dependency>
+      <groupId>net.sf.m-m-m</groupId>
+      <artifactId>mmm-util-core</artifactId>
+      <version>7.5.1</version>
+    </dependency>
+      
+      <dependency>
         <groupId>com.devonfw.cobigen</groupId>
         <artifactId>com.devonfw.cobigen.eclipse</artifactId>
         <version>4.3.2</version>
