--- a/cobigen-cli/pom.xml
+++ b/cobigen-cli/pom.xml
@@ -13,10 +13,11 @@
          <artifactId>core</artifactId>
          <version>5.2.0</version>
       </dependency>
+      
       <dependency>
           <groupId>info.picocli</groupId>
           <artifactId>picocli</artifactId>
-          <version>3.9.6</version>
+          <version>4.0.0-beta-1b</version>
       </dependency>
 
       <dependency>
@@ -24,78 +25,93 @@
          <artifactId>core-api</artifactId>
          <version>5.2.0</version>
       </dependency>
+      
       <dependency>
          <groupId>com.devonfw.cobigen</groupId>
          <artifactId>javaplugin</artifactId>
          <version>2.0.0</version>
       </dependency>
+      
       <dependency>
          <groupId>com.devonfw.cobigen</groupId>
          <artifactId>tsplugin</artifactId>
          <version>2.1.0</version>
       </dependency>
+      
       <dependency>
          <groupId>com.devonfw.cobigen</groupId>
          <artifactId>xmlplugin</artifactId>
          <version>4.0.0</version>
       </dependency>
+      
       <dependency>
          <groupId>com.devonfw.cobigen</groupId>
          <artifactId>textmerger</artifactId>
          <version>2.0.0</version>
       </dependency>
+      
       <dependency>
          <groupId>com.devonfw.cobigen</groupId>
          <artifactId>openapiplugin</artifactId>
          <version>2.2.0</version>
       </dependency>
+      
       <dependency>
          <groupId>com.devonfw.cobigen</groupId>
          <artifactId>maven-plugin</artifactId>
          <version>4.1.0</version>
          <type>maven-plugin</type>
       </dependency>
+      
       <dependency>
          <groupId>org.freemarker</groupId>
          <artifactId>freemarker</artifactId>
          <version>2.3.23</version>
          <scope>compile</scope>
       </dependency>
+      
       <dependency>
          <groupId>com.devonfw.cobigen</groupId>
          <artifactId>tempeng-freemarker</artifactId>
          <version>2.0.0</version>
       </dependency>
+      
       <dependency>
         <groupId>com.devonfw.cobigen</groupId>
          <artifactId>htmlplugin</artifactId>
           <version>2.0.1</version>
       </dependency>
+      
       <dependency>
         <groupId>com.devonfw.cobigen</groupId>
         <artifactId>propertyplugin</artifactId>
       <version>2.0.0</version>
       </dependency>
+      
       <dependency>
         <groupId>com.devonfw.cobigen</groupId>
           <artifactId>jsonplugin</artifactId>
           <version>2.0.0</version>
       </dependency>
+      
       <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
          <version>1.7.25</version>
       </dependency>
+      
       <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-simple</artifactId>
          <version>1.7.21</version>
       </dependency>
+      
       <dependency>
          <groupId>net.sf.m-m-m</groupId>
          <artifactId>mmm-code-java-parser</artifactId>
          <version>1.0.0-SNAPSHOT</version>
       </dependency>
+      
       <dependency>
          <groupId>net.sf.m-m-m</groupId>
          <artifactId>mmm-code-base</artifactId>
