--- a/cobigen-templates/templates-devon4j/src/test/resources/testdata/templatetest/TestAllTemplatesXMLInput/pom.xml
+++ b/cobigen-templates/templates-devon4j/src/test/resources/testdata/templatetest/TestAllTemplatesXMLInput/pom.xml
@@ -49,7 +49,7 @@
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>openapiplugin</artifactId>
-            <version>2.1.0-SNAPSHOT</version>
+            <version>2.1.0</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
