--- a/cobigen-cli/pom.xml
+++ b/cobigen-cli/pom.xml
@@ -27,7 +27,7 @@
       <dependency>
          <groupId>com.devonfw.cobigen</groupId>
          <artifactId>core-api</artifactId>
-         <version>5.2.0</version>
+         <version>5.3.0-SNAPSHOT</version>
       </dependency>
       
       <dependency>
