--- a/cobigen/cobigen-xmlplugin/pom.xml
+++ b/cobigen/cobigen-xmlplugin/pom.xml
@@ -21,7 +21,7 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-api</artifactId>
-      <version>5.3.0-SNAPSHOT</version>
+      <version>5.3.0</version>
     </dependency>
     <dependency>
       <artifactId>lexeme</artifactId>
@@ -32,7 +32,7 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-test</artifactId>
-      <version>5.3.0-SNAPSHOT</version>
+      <version>5.3.0</version>
       <scope>test</scope>
     </dependency>
 
@@ -47,7 +47,7 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core</artifactId>
-      <version>5.3.0-SNAPSHOT</version>
+      <version>5.3.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
