--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <p2.upload.url>ftp://${icsd.server.url}</p2.upload.url>
     <p2.repository.build.dir>${project.build.directory}${file.separator}repository</p2.repository.build.dir>
     <p2.repository.upload.dir>${project.build.directory}${file.separator}repository-upload</p2.repository.upload.dir>
-	<p2.repository.upload.dir.plugin>${p2.repository.upload.dir}/cobigen-${project.artifactId}</p2.repository.upload.dir.plugin>
+    <p2.repository.upload.dir.plugin>${p2.repository.upload.dir}/cobigen-${project.artifactId}</p2.repository.upload.dir.plugin>
     <updatesite.path>files/cobigen/updatesite</updatesite.path>
     <attach.source.javadoc.build>true</attach.source.javadoc.build>
   </properties>
@@ -673,23 +673,38 @@
                   <goal>download</goal>
                 </goals>
                 <configuration>
-                  <url>https://dl.bintray.com/cobigen.p2</url>
+                  <url>https://dl.bintray.com/devonfw/cobigen.p2</url>
                   <includes>artifacts.jar,content.jar</includes>
                   <toDir>${p2.repository.upload.dir.plugin}</toDir>
-				  <serverId>bintray-repo</serverId>
+                  <serverId>bintray-repo</serverId>
                 </configuration>
               </execution>
+              <!-- Here we are going to upload artifacts.jar and content.jar -->
               <execution>
-                <id>upload-snapshot</id>
+                <id>upload-jars</id>
                 <phase>deploy</phase>
                 <goals>
                   <goal>upload</goal>
                 </goals>
                 <configuration>
                   <fromDir>${p2.repository.upload.dir.plugin}</fromDir>
-                  <includes>**</includes>
-                  <url>https://api.bintray.com/content/devonfw/cobigen.p2/updatesite</url>
-                  <toDir>cobigen-${project.artifactId}</toDir>
+                  <includes>*.jar</includes>
+                  <url>https://api.bintray.com/content/devonfw/cobigen.p2/cobigen-${project.artifactId}</url>
+                  <serverId>bintray-repo</serverId>
+                </configuration>
+              </execution>
+              <!-- Here we are going to upload the /plugins folder -->
+              <execution>
+                <id>upload-directory</id>
+                <phase>deploy</phase>
+                <goals>
+                  <goal>upload</goal>
+                </goals>
+                <configuration>
+                  <fromDir>${p2.repository.upload.dir.plugin}</fromDir>
+                  <excludes>*.jar</excludes>
+                  <!-- We need to duplicate /cobigen-${project.artifactId} as a workaround for bintray -->
+                  <url>https://api.bintray.com/content/devonfw/cobigen.p2/updatesite/cobigen-${project.artifactId}/cobigen-${project.artifactId}</url>
                   <serverId>bintray-repo</serverId>
                 </configuration>
               </execution>
