--- a/cobigen-cli/pom.xml
+++ b/cobigen-cli/pom.xml
@@ -45,22 +45,22 @@
     <dependency>
       <groupId>net.sf.m-m-m</groupId>
       <artifactId>mmm-code-java-parser</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0-beta2</version>
     </dependency>
     <dependency>
       <groupId>net.sf.m-m-m</groupId>
       <artifactId>mmm-code-base</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0-beta2</version>
     </dependency>
     <dependency>
       <groupId>net.sf.m-m-m</groupId>
       <artifactId>mmm-code-java-maven</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0-beta2</version>
     </dependency>
     <dependency>
       <groupId>net.sf.m-m-m</groupId>
       <artifactId>mmm-code-java-impl</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0-beta2</version>
     </dependency>
     <dependency>
       <groupId>net.sf.m-m-m</groupId>
