--- a/cobigen-cli/src/main/resources/pom.xml
+++ b/cobigen-cli/src/main/resources/pom.xml
@@ -20,7 +20,7 @@
       <dependency>
         <groupId>com.devonfw.cobigen</groupId>
         <artifactId>tsplugin</artifactId>
-        <version>2.2.0</version>
+        <version>2.3.0</version>
       </dependency>
       <dependency>
         <groupId>com.devonfw.cobigen</groupId>
@@ -63,6 +63,26 @@
         <artifactId>jsonplugin</artifactId>
         <version>2.0.0</version>
       </dependency>
+          <dependency>
+      <groupId>net.sf.m-m-m</groupId>
+      <artifactId>mmm-code-java-parser</artifactId>
+      <version>1.0.0-beta2</version>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.m-m-m</groupId>
+      <artifactId>mmm-code-base</artifactId>
+      <version>1.0.0-beta2</version>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.m-m-m</groupId>
+      <artifactId>mmm-code-java-maven</artifactId>
+      <version>1.0.0-beta2</version>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.m-m-m</groupId>
+      <artifactId>mmm-util-core</artifactId>
+      <version>7.5.1</version>
+    </dependency>
   </dependencies>
     
 </project>
