--- a/cobigen-cli/src/main/resources/pom.xml
+++ b/cobigen-cli/src/main/resources/pom.xml
@@ -63,7 +63,14 @@
         <artifactId>jsonplugin</artifactId>
         <version>2.0.0</version>
       </dependency>
-          <dependency>
+    
+    <dependency>
+	  <groupId>com.devonfw.cobigen</groupId>
+	  <artifactId>templates-devon4j</artifactId>
+	  <version>3.1.6</version>
+	</dependency>
+      
+    <dependency>
       <groupId>net.sf.m-m-m</groupId>
       <artifactId>mmm-code-java-parser</artifactId>
       <version>1.0.0-beta2</version>
