--- a/cobigen/cobigen-tsplugin/src/main/resources/META-INF/externalservers/server.properties
+++ b/cobigen/cobigen-tsplugin/src/main/resources/META-INF/externalservers/server.properties
@@ -1,4 +1,5 @@
 # External server properties
+plugin.name=${artifactId}
 server.name=${server.name}
 server.version=${server.version}
 server.url=${server.url}
