--- a/cobigen-cli/pom.xml
+++ b/cobigen-cli/pom.xml
@@ -24,7 +24,7 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-api</artifactId>
-      <version>5.3.2</version>
+      <version>5.4.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>info.picocli</groupId>
