--- a/cobigen/cobigen-core-parent/pom.xml
+++ b/cobigen/cobigen-core-parent/pom.xml
@@ -12,7 +12,7 @@
   </parent>
 
   <properties>
-    <cobigencore.version>5.3.4-SNAPSHOT</cobigencore.version>
+    <cobigencore.version>5.3.4</cobigencore.version>
   </properties>
 
   <modules>
