--- a/cobigen-eclipse/cobigen-eclipse/pom.xml
+++ b/cobigen-eclipse/cobigen-eclipse/pom.xml
@@ -3,7 +3,7 @@
   <artifactId>com.devonfw.cobigen.eclipse</artifactId>
   <name>CobiGen - Eclipse Plug-In</name>
   <packaging>eclipse-plugin</packaging>
-  <version>4.4.3-SNAPSHOT</version>
+  <version>4.4.3</version>
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
