--- a/cobigen-maven/cobigen-maven-systemtest/src/test/resources/testdata/systemtest/Oasp4JTemplateTest/TestDifferentFileSystems/pom.xml
+++ b/cobigen-maven/cobigen-maven-systemtest/src/test/resources/testdata/systemtest/Oasp4JTemplateTest/TestDifferentFileSystems/pom.xml
@@ -66,7 +66,7 @@
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>tsplugin</artifactId>
-            <version>2.0.0</version>
+            <version>2.5.0-SNAPSHOT</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
