--- a/cobigen-maven/cobigen-maven-plugin/pom.xml
+++ b/cobigen-maven/cobigen-maven-plugin/pom.xml
@@ -39,6 +39,12 @@
       <artifactId>core</artifactId>
       <version>6.0.0</version>
     </dependency>
+    <!-- Fix API version to not get any old injected by any plug-in -->
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>core-api</artifactId>
+      <version>6.0.0</version>
+    </dependency>
 
     <!-- dependencies to annotations -->
     <dependency>
