--- a/.travis.yml
+++ b/.travis.yml
@@ -25,33 +25,33 @@ jobs:
   include:
     - stage: Build & Test
       name: Build & Test (openjdk8)
-      before_script: []
+      install: []
       script: ./scripts/travis-build-test.sh
       if: (branch != gh-pages) AND (branch != dev_oomph_setup) AND (tag IS blank)
       jdk: openjdk8
     - name: Build & Test (openjdk11)
-      before_script: []
+      install: []
       script: ./scripts/travis-build-test.sh
       if: (branch != gh-pages) AND (branch != dev_oomph_setup) AND (tag IS blank)
       jdk: openjdk11
     - name: Build docs as PDF
-      before_script: []
+      install: []
       script: ./scripts/travis-build-docs.sh
       if: (branch != gh-pages) AND (branch != dev_oomph_setup) AND (tag IS blank)
       jdk: openjdk11
     - stage: Deploy
       name: Deploy M2
-      before_script: []
+      install: []
       script: ./scripts/travis-deploy-m2.sh
       if: (branch != master) AND (branch != gh-pages) AND (branch != dev_oomph_setup) AND (branch != dev_eclipseplugin) AND (type != pull_request) AND (fork = false) AND (tag IS blank)
       jdk: openjdk11
     - name: Deploy P2
-      before_script: []
+      install: []
       script: ./scripts/travis-deploy-p2.sh
       if: (branch != master) AND (branch != gh-pages) AND (branch != dev_oomph_setup) AND (branch != dev_core) AND (branch != dev_mavenplugin) AND (type != pull_request) AND (fork = false) AND (tag IS blank)
       jdk: openjdk11
     - name: Deploy docs to devonfw-guide & devonfw.com
-      before_script: []
+      install: []
       script: ./scripts/travis-sync-docs.sh
       if: (branch = master) AND (type != pull_request) AND (fork = false) AND (tag IS blank)
       jdk: openjdk11
