--- a/cobigen-maven/cobigen-maven-systemtest/src/test/resources/testdata/systemtest/Devon4JTemplateTest/TestDifferentFileSystems/pom.xml
+++ b/cobigen-maven/cobigen-maven-systemtest/src/test/resources/testdata/systemtest/Devon4JTemplateTest/TestDifferentFileSystems/pom.xml
@@ -34,6 +34,11 @@
           </templates>
         </configuration>
         <dependencies>
+        <dependency>
+            <groupId>com.devonfw.cobigen</groupId>
+            <artifactId>templates-devon4j</artifactId>
+            <version>3.1.8</version>
+        </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>tempeng-freemarker</artifactId>
@@ -42,12 +47,12 @@
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>openapiplugin</artifactId>
-            <version>2.5.0-SNAPSHOT</version>
+            <version>2.4.0</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>openapiplugin-model</artifactId>
-            <version>2.5.0-SNAPSHOT</version>
+            <version>2.4.0</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
@@ -67,7 +72,7 @@
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>tsplugin</artifactId>
-            <version>2.5.0-SNAPSHOT</version>
+            <version>2.4.2</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
