--- a/cobigen-maven/cobigen-maven-systemtest/src/test/resources/testdata/systemtest/Devon4JTemplateTest/TestEntityInputDataaccessGeneration/pom.xml
+++ b/cobigen-maven/cobigen-maven-systemtest/src/test/resources/testdata/systemtest/Devon4JTemplateTest/TestEntityInputDataaccessGeneration/pom.xml
@@ -57,7 +57,7 @@
         <dependency>
           <groupId>com.devonfw.cobigen</groupId>
           <artifactId>tsplugin</artifactId>
-          <version>2.5.0-SNAPSHOT</version>
+          <version>2.4.2</version>
         </dependency>
         <dependency>
           <groupId>com.devonfw.cobigen</groupId>
