--- a/cobigen-maven/cobigen-maven-systemtest/src/test/resources/testdata/systemtest/Devon4JTemplateTest/TestEntityInputDataaccessGenerationWithTemplateFolder/pom.xml
+++ b/cobigen-maven/cobigen-maven-systemtest/src/test/resources/testdata/systemtest/Devon4JTemplateTest/TestEntityInputDataaccessGenerationWithTemplateFolder/pom.xml
@@ -38,7 +38,7 @@
           <dependency>
           <groupId>com.devonfw.cobigen</groupId>
           <artifactId>javaplugin</artifactId>
-          <version>2.3.0-SNAPSHOT</version>
+          <version>2.2.0</version>
         </dependency>
         <dependency>
           <groupId>com.devonfw.cobigen</groupId>
@@ -53,7 +53,7 @@
         <dependency>
           <groupId>com.devonfw.cobigen</groupId>
           <artifactId>tsplugin</artifactId>
-          <version>2.5.0-SNAPSHOT</version>
+          <version>2.4.2</version>
         </dependency>
         <dependency>
           <groupId>com.devonfw.cobigen</groupId>
