--- a/cobigen-cli/cli/pom.xml
+++ b/cobigen-cli/cli/pom.xml
@@ -25,12 +25,12 @@
       <dependency>
          <groupId>com.devonfw.cobigen</groupId>
          <artifactId>core</artifactId>
-         <version>5.4.0</version>
+         <version>6.1.0-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>com.devonfw.cobigen</groupId>
          <artifactId>core-api</artifactId>
-         <version>5.4.0</version>
+         <version>6.1.0-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>info.picocli</groupId>
