--- a/cobigen-maven/cobigen-maven-plugin/pom.xml
+++ b/cobigen-maven/cobigen-maven-plugin/pom.xml
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>core</artifactId>
-      <version>6.1.0-SNAPSHOT</version>
+      <version>6.1.0</version>
     </dependency>
     <!-- Fix API version to not get any old injected by any plug-in -->
     <dependency>
