--- a/cobigen-cli/cli/pom.xml
+++ b/cobigen-cli/cli/pom.xml
@@ -24,7 +24,7 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core</artifactId>
-      <version>6.1.0-SNAPSHOT</version>
+      <version>6.1.0</version>
     </dependency>
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
