--- a/cobigen-cli/cli/src/test/resources/testdata/localmavenproject/maven.project/pom.xml
+++ b/cobigen-cli/cli/src/test/resources/testdata/localmavenproject/maven.project/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>maven.project</artifactId>
   <groupId>testing</groupId>
-  <version>1.1.0</version>
+  <version>1.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Test_Local_Maven_Project</name>
 
