--- a/cobigen-cli/class-loader-agent/pom.xml
+++ b/cobigen-cli/class-loader-agent/pom.xml
@@ -3,6 +3,7 @@
   <artifactId>class-loader-agent</artifactId>
   <version>1.2.0-SNAPSHOT</version>
   <name>Class loader agent</name>
+  <description>Class loader agent for CobiGen CLI</description>
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
